--- a/artifact/.gitignore
+++ b/artifact/.gitignore
@@ -10,5 +10,8 @@ models/*
 !models/model/
 !models/bloom_176b
 !models/llama_70b
+!models/llama3_8b
+!models/llama3_70b
+!models/mamba2
 
 Figure4090
